--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+asgiref==3.3.4
 Django==3.2
 django-cors-headers==3.7.0
+djangorestframework==3.12.4
 psycopg2-binary==2.8.4
+pytz==2021.1
+setuptools==49.2.1
+sqlparse==0.4.1
